Fix cover image alignment

--- a/themes/hugo-creative-theme/static/css/creative.css
+++ b/themes/hugo-creative-theme/static/css/creative.css
@@ -216,7 +216,7 @@ aside, #credits {
 }
 
 .cover-img {
-    width: 900px;
+    width: 100%;
     height: auto;
     display: block;
 }
